[package]
name = "rust-blocklattice"
version = "0.1.0"
authors = ["Mick <mickvd99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "*"
crypto-hash = "*"

